Feat:  Criado os repositórios das classes person e Produc, criado as interfaces e a DTO para validações de dados da classe Person.

--- a/Api.DotNet.Api/Api.DotNet.Api.csproj
+++ b/Api.DotNet.Api/Api.DotNet.Api.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Api.DotNet.Infra.IoC\Api.DotNet.Infra.IoC.csproj" />
   </ItemGroup>
 
