--- a/Api.DotNet.Application/Api.DotNet.Application.csproj
+++ b/Api.DotNet.Application/Api.DotNet.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Api.DotNet.Domain\Api.DotNet.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.6" />
+  </ItemGroup>
+
 </Project>
