--- a/Api.DotNet.Application/Api.DotNet.Application.csproj
+++ b/Api.DotNet.Application/Api.DotNet.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="FluentValidation" Version="10.3.6" />
   </ItemGroup>
 
