--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Api.DotNet.Api1/appsettings.json
+
+# Arquivo local com dados sensíveis
+appsettings.Development.json
+
