--- a/Api.DotNet.Api1/appsettings.Development.json
+++ b/Api.DotNet.Api1/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=MP_DOTNET6_API;Username=postgres;Password=postgres;Timeout=10;SslMode=Prefer"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
