Feat: Criado os métodos Get, Post e delet da entidade Person

--- a/Api.DotNet.Api1/appsettings.Development.json
+++ b/Api.DotNet.Api1/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
-  ,
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=MP_DOTNET6_API;Username=postgres;Password=postgres;Timeout=10;SslMode=Prefer"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
